# rssfeed

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle.ini  .yamllint  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
rssfeed/: __init__.py  app.py  custom.py  dilbert.py  feed.py
tests/: custom_test.py
