[tool.poetry]
name = "rssfeed"
version = "0.1.0.dev"
description = "Tweak & forward RSS feeds"
authors = ["Ivan Héda <ivan.heda@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
